--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,5 @@ plugins: ./_plugins
 layouts: ./_layouts
 paginate: 3
 permalink: pretty
+future: false
 name: Isaac Castillo | My Blog and some of my work
