--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,33 @@
-source: .
-destination: ./_site
+title: Isaac Castillo Blog. Also View some of my work :)
+email: icemancast@gmail.com
+description: > # I have been doing design, web design and web development work for over
+  10 years. I enjoy writing, creating and debugging code. I get a
+  satisfaction when all the pieces of a development project come together.
+  I have worked with various technologies and languages; Kohana framework,
+  PHP, MySQL, CSS, Sass, Capistrano, Git and Wordpress just to name a few.
+  My current lamp development environment is Laravel (php MVC framework) on a
+  vagrant virtual box.
+source: . # Where is source code
+destination: ./_site # Where to compile
 plugins: ./_plugins
 layouts: ./_layouts
 paginate: 3
 permalink: pretty
 future: false
-name: Isaac Castillo | My Blog and some of my work
+
+# Site settings
+baseurl: "/" # the subpath of your site, e.g. /blog/
+url: "http://icastwork.com" # the base hostname & protocol for your site
+twitter_username: icemancast
+github_username:  icemancast
+
+# Build settings
 markdown: kramdown
+
+# Site map settings
 sitemap:
   file: "/sitemap.xml"
   include_posts:
   - "/index.html"
+
+
