--- a/_data/personal.yml
+++ b/_data/personal.yml
@@ -1,7 +1,7 @@
 owner_name: Isaac Castillo
-position: Full Stack Web Developer
+position: Web Application Developer
 bio: > # I have been doing design, web design and web development work for over
-  10 years. I enjoy writing, creating and debugging code. I get a
+  15 years. I enjoy writing, creating and debugging code. I get a
   satisfaction when all the pieces of a development project come together.
   I have worked with various technologies and languages; Kohana framework,
   PHP, MySQL, CSS, Sass, Capistrano, Git and Wordpress just to name a few.
