--- a/_data/personal.yml
+++ b/_data/personal.yml
@@ -1,7 +1,7 @@
 owner_name: Isaac Castillo
 position: Web Application Developer
 bio: |
-    I have been doing design and web application development work for over 15 years. I enjoy solving hard problems with code. Yeah it makes me beat my forehead against the screen but after doing so I come across wonderful solutions. I have worked with various frameworks/libraries and languages; Kohana framework, PHP, MySQL, CSS, Sass, Capistrano, Git, Jquery, Emberjs and Wordpress just to name a few. My current lamp development environment is Laravel (php MVC framework) and Wordpress on a vagrant virtual box.
+  I have been doing design and web application development work for over 15 years. I enjoy solving hard problems with code and have worked with various frameworks/libraries and languages; Kohana framework, PHP, MySQL, CSS, Sass, Capistrano, Git, Jquery, Emberjs and Wordpress just to name a few. My current framework development is Laravel, Reactjs and Wordpress. I am also in the process of releasing my first iOS application for a client written solely in React Native.
 phone: (210) 595-0499
 linkedin: view?id=18871848
 google_plus: 104205610870262290545
