--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Isaac Castillo Blog. Also View some of my work :)
 email: icemancast@gmail.com
-description: > # I have been doing design and web application development work for over
-  15 years. I enjoy solving hard problems with code and have worked with various
-  frameworks/libraries and languages; Kohana framework, PHP, MySQL, CSS, Sass,
-  Capistrano, Git, Jquery, Emberjs and Wordpress just to name a few. My current
-  framework development is Laravel, Reactjs and Wordpress. I am also in the process
-  of releasing my first iOS application for a client written solely in React Native.
+# description: > # I have been doing design and web application development work for over
+#     Hey, my name is Isaac. I have been doing design and web application development work for over 15 years. I enjoy solving hard problems with code and love getting the job done. I have worked with various
+#     frameworks/libraries and languages; PHP, MySQL, CSS, Sass, Vuejs, Reactjs, WordPress, WooCommerce, Laravel and Rails,  just to name a few. I consider myself a full stack web application developer and can
+#     jump into a project and get quickly rooted. I’m highly motivated, deadline-driven and love to learn more about my field daily. I’m constantly reading, watching videos and tutorials and that's what I do
+#     just for fun! I’m a husband and a father, so in terms of provision and having great work ethic, that’s very important to me. I find it very fulfilling when a project has successfully been completed or
+#     when a full-on launch has deployed glitch-free. That’s just a little bit about me, but I would love to hear more about you and your project and how we can potentially work together.
 source: . # Where is source code
 destination: ./_site # Where to compile
 plugins_dir: ./_plugins
